--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -11,13 +11,70 @@ footer{
         width: 80%;
         margin: 4rem 0;
         display: flex;
-        justify-content: space-around;
         .container{
+            margin: 2rem 0;
+            width: 50%;
             display: flex;
             align-items: center;
-            i{
+            justify-content: center;
+            margin: auto;
+            >i{
                 margin-right: 1rem;
             }
         }
     }
+}
+.contact{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    div{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+}
+input[type=text], textarea{
+    font-size: 1.5rem;
+    padding: 0.4rem 0.2rem;
+    border: 0.2rem solid $main;
+    width: 100%;
+    background: none;
+    margin: 0.7rem;
+    outline: none;
+    color: white;
+}
+textarea{
+    resize: none;
+}
+small{
+    margin: 0.5rem;
+    width: 90%;
+    text-align: center;
+}
+
+.pop-up{
+    background: rgba(0,0,0, 0.4);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    transition: opacity 1s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    div{
+        transition: opacity 1s ease;
+        padding: 2rem;
+        text-align: center;
+        height: 30%;
+        background: $white;
+        color: black;
+        border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    } 
 }
